# kestrel-vault

./: .gitignore  index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  worklog.md
docs/architecture/: overview.md
download/: generate_kestrel_icons.py  generate_tauri_icons.py
download/kestrel-vault-fix/: connection.rs  kdf.rs  scanner_commands.rs
kestrel-vault/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
kestrel-vault-icons/: fix_ico.py  fix_ico_v2.py  generate_icons.py  generate_v2.py  icon.icns
kestrel-vault/src/: main.tsx
kestrel-vault/src-tauri/: Cargo.toml  clippy.toml  rustfmt.toml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audit/: logger.rs
src-tauri/src/commands/: audit_commands.rs  auth_commands.rs  backup_commands.rs  file_commands.rs  folder_commands.rs  mod.rs  note_commands.rs  scanner_commands.rs  settings_commands.rs  types.rs  vault_data_commands.rs
src-tauri/src/config/: mod.rs
src-tauri/src/crypto/: keywrap.rs  secure_string.rs  subkeys.rs
src-tauri/src/db/: connection.rs  file_entry_repo.rs  folder_repo.rs  manager.rs  secure_note_repo.rs  vault_entry_repo.rs  vault_meta_repo.rs
src-tauri/src/scanner/: breach_check.rs  vulnerability.rs
src-tauri/src/security/: session.rs
src-tauri/src/vault/: service.rs
src/app/: UnlockScreen.tsx  VaultView.tsx
src/components/: NotificationDropdown.tsx  PageTransition.tsx  (+1 more)
tool-results/: read_1781439692134_d6cb15f63cc4.txt
upload/: Pasted Content_1781189200674.txt  Pasted Content_1781189327204.txt  Pasted Content_1781191943287.txt  Pasted Content_1781326938161.txt  Pasted Content_1781330489562.txt
work/: tailwind.config.ts
(+187 files in other folders)
