[package]
name = "kestrel-vault"
version = "0.1.0"
description = "KESTREL Vault - Local-first security platform"
authors = ["KESTREL Team"]
edition = "2021"
license = "MIT"
repository = ""
rust-version = "1.75.0"

[lib]
name = "kestrel_vault"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "kestrel-vault"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri v2 core - disable default-features to prevent brotli 8.x (alloc_no_stdlib conflict)
tauri = { version = "2", default-features = false, features = ["tray-icon", "wry", "common-controls-v6"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# reqwest without brotli to avoid alloc_no_stdlib v2/v3 conflict
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Security - memory safety
zeroize = { version = "1", features = ["derive"] }
secrecy = { version = "0.10", features = ["serde"] }

# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"

# Identity
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
once_cell = "1"
parking_lot = "0.12"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
